# montra

./: .env  .gitignore  README.md  cookies.txt  hello.py  pyproject.toml
accounts/: admin.py  apps.py  backends.py  forms.py  models.py  scheduler.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_userprofile_avatar.py  0003_userprofile_show_hero_image.py  0004_emailverificationtoken.py  0005_passwordresettoken.py  0006_emailverificationtoken_attempt_count_and_more.py  0007_userprofile_email_reminders.py  0008_remove_userprofile_show_hero_image.py
config/: settings.py  urls.py
core/: context_processors.py
core/templatetags/: core_tags.py
core/utils/: cache.py
reports/: urls.py  views.py
templates/: 404.html  base.html  base_htmx.html
templates/accounts/: _messages.html  forgot_password.html  login.html  password_reset_email.html  profile.html  register.html  resend_verification.html  reset_password_confirm.html  verification_sent.html  verify_email.html
templates/reports/: reports.html
templates/transactions/: budget_confirm_delete.html  budget_form.html  budget_list.html  category_confirm_delete.html  category_form.html  category_list.html  dashboard.html  savings_confirm_delete.html  savings_form.html  savings_list.html  transaction_confirm_delete.html  transaction_form.html  transaction_list.html
transactions/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
transactions/migrations/: 0001_initial.py  0002_alter_category_icon.py  0003_delete_recurringtransaction.py  0004_savingsgoal.py  (+2 more)
(+7 files in other folders)
